--- a/app/src/main/res/layout/categories_item.xml
+++ b/app/src/main/res/layout/categories_item.xml
@@ -1,39 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="152dp"
-    android:layout_height="152dp"
-    android:background="@color/white"
-    android:layout_margin="@dimen/size8"
-    android:clipToPadding="false">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/categoriesImageView"
-        android:layout_width="152dp"
-        android:layout_height="152dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_launcher_background"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:clipToOutline="true"
-        android:layout_marginBottom="@dimen/minus_size_8" />
-
-    <TextView
-        android:id="@+id/categoriesText"
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/size0"
-        android:layout_marginStart="@dimen/size6"
-        android:layout_marginEnd="@dimen/size30"
-        android:layout_marginTop="@dimen/size6"
-        android:fontFamily="@font/roboto"
-        android:text="@string/edible_plants"
-        android:textColor="@color/black"
-        android:textSize="@dimen/font_size_16"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        app:strokeColor="#E4E0E0"
+        app:cardElevation="0dp"
+        android:elevation="0dp"
+        app:cardCornerRadius="@dimen/size8">
+
+        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="152dp"
+            android:layout_height="152dp"
+            android:background="@color/white"
+            android:clipToPadding="false">
+
+            <ImageView
+                android:id="@+id/categoriesImageView"
+                android:layout_width="152dp"
+                android:layout_height="152dp"
+                android:clipToOutline="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_launcher_background"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/categoriesText"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/size0"
+                android:layout_marginStart="@dimen/size6"
+                android:layout_marginTop="@dimen/size6"
+                android:layout_marginEnd="@dimen/size30"
+                android:fontFamily="@font/roboto"
+                android:text="@string/edible_plants"
+                android:textColor="@color/black"
+                android:textSize="@dimen/font_size_16"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
