--- a/app/src/main/res/layout/fragment_get_started.xml
+++ b/app/src/main/res/layout/fragment_get_started.xml
@@ -53,8 +53,8 @@
         app:cardBackgroundColor="@color/onboarding_button"
         app:cardCornerRadius="@dimen/size6"
         app:cardElevation="@dimen/size1"
-        android:layout_marginBottom="@dimen/size7"
-        app:layout_constraintBottom_toTopOf="@+id/byTappingText"
+        android:layout_marginBottom="@dimen/size4"
+        app:layout_constraintBottom_toTopOf="@+id/cl_byTappingText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
@@ -70,19 +70,27 @@
             android:textStyle="bold" />
 
     </com.google.android.material.card.MaterialCardView>
-
-    <TextView
-        android:id="@+id/byTappingText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:lineHeight="@dimen/size7"
-        android:text="@string/by_tapping_text"
-        android:layout_marginBottom="@dimen/size14"
-        android:textColor="@color/semi_transparent_gray_green"
-        android:textSize="@dimen/font_size_11"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_byTappingText"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/size25"
+        android:layout_marginBottom="@dimen/size8"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/getStartedButton"
-        app:layout_constraintStart_toStartOf="@+id/getStartedButton" />
+        >
+        <TextView
+            android:id="@+id/byTappingText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/by_tapping_text"
+            android:textColor="@color/semi_transparent_gray_green"
+            android:textSize="@dimen/font_size_11"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
