--- a/app/src/main/res/layout/categories_item.xml
+++ b/app/src/main/res/layout/categories_item.xml
@@ -7,10 +7,14 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:strokeColor="#F4F6F6"
-        app:cardElevation="0dp"
         android:elevation="0dp"
-        app:cardCornerRadius="@dimen/size8">
+        app:cardCornerRadius="@dimen/size8"
+        app:cardElevation="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="#F4F6F6">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="152dp"
