--- a/app/src/main/res/layout/categories_item.xml
+++ b/app/src/main/res/layout/categories_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
@@ -17,14 +17,14 @@
         app:strokeColor="#F4F6F6">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="152dp"
+            android:layout_width="match_parent"
             android:layout_height="152dp"
             android:background="@color/white"
             android:clipToPadding="false">
 
             <ImageView
                 android:id="@+id/categoriesImageView"
-                android:layout_width="152dp"
+                android:layout_width="match_parent"
                 android:layout_height="152dp"
                 android:clipToOutline="true"
                 android:scaleType="centerCrop"
@@ -35,18 +35,18 @@
 
             <TextView
                 android:id="@+id/categoriesText"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/size0"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:maxLines="3"
                 android:layout_marginStart="@dimen/size6"
                 android:layout_marginTop="@dimen/size6"
-                android:layout_marginEnd="@dimen/size25"
                 android:fontFamily="@font/roboto"
                 android:text="@string/edible_plants"
                 android:textColor="@color/black"
                 android:textSize="@dimen/font_size_16"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_percent="0.5" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
