--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <dimen name="oneDp">1dp</dimen>
     <dimen name="size0">0dp</dimen>
     <dimen name="size1">2dp</dimen>
     <dimen name="size2">4dp</dimen>
