--- a/app/src/main/res/layout/activity_paywall.xml
+++ b/app/src/main/res/layout/activity_paywall.xml
@@ -7,17 +7,15 @@
     android:background="@color/paywall_background_color"
     tools:context=".ui.paywall.PaywallActivity">
 
-
     <ImageView
         android:id="@+id/premiumImage"
         android:layout_width="match_parent"
-        android:layout_height="465dp"
+        android:layout_height="@dimen/dp465"
         android:scaleType="fitXY"
         android:src="@drawable/paywall_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <TextView
         android:id="@+id/titleText"
@@ -45,7 +43,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/titleText" />
-    >
 
     <ImageView
         android:id="@+id/closeButton"
@@ -56,7 +53,6 @@
         android:src="@drawable/paywall_button_close"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <ImageView
         android:id="@+id/unlimited_image"
@@ -78,7 +74,7 @@
         android:layout_marginStart="@dimen/size8"
         android:layout_marginTop="@dimen/size32"
         android:layout_marginEnd="@dimen/size8"
-        app:cardBackgroundColor="#12FFFFFF"
+        app:cardBackgroundColor="@color/paywall_item_background"
         app:cardCornerRadius="@dimen/size8"
         android:layout_marginBottom="@dimen/size8"
         app:cardElevation="@dimen/size0"
@@ -142,7 +138,7 @@
         android:layout_marginStart="@dimen/size8"
         android:layout_marginTop="@dimen/size8"
         android:layout_marginEnd="@dimen/size8"
-        app:cardBackgroundColor="#12FFFFFF"
+        app:cardBackgroundColor="@color/paywall_item_background"
         app:cardCornerRadius="@dimen/size8"
         app:cardElevation="@dimen/size0"
         android:layout_marginBottom="@dimen/size12"
@@ -226,6 +222,7 @@
             android:gravity="center"
             android:paddingVertical="@dimen/size9"
             android:text="@string/try_free_for_3_days"
+            android:fontFamily="@font/roboto"
             android:textColor="@android:color/white"
             android:textSize="@dimen/font_size_16"
             android:textStyle="bold" />
@@ -234,7 +231,7 @@
 
     <TextView
         android:id="@+id/afterTheText"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/size0"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/size3"
         android:gravity="center"
@@ -248,7 +245,7 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/size0"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/size10"
         android:gravity="center"
