--- a/app/src/main/res/layout/fragment_first_onboarding.xml
+++ b/app/src/main/res/layout/fragment_first_onboarding.xml
@@ -62,6 +62,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingVertical="@dimen/size9"
+            android:fontFamily="@font/roboto"
             android:text="@string/_continue"
             android:textColor="@android:color/white"
             android:textSize="@dimen/font_size_16"
