--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -59,9 +59,9 @@
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/size8"
         app:cardBackgroundColor="#24201A"
-        app:cardCornerRadius="12dp"
+        app:cardCornerRadius="@dimen/size6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/premiumImage">
@@ -71,7 +71,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="16dp">
+            android:padding="@dimen/size8">
 
             <ImageView
                 android:id="@+id/icon"
@@ -81,9 +81,9 @@
                 android:src="@drawable/ic_mail" />
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="@dimen/size0"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="@dimen/size4"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -115,15 +115,14 @@
     </com.google.android.material.card.MaterialCardView>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="@dimen/size0"
+        android:layout_marginTop="@dimen/size3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/materialCardView">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/questionRecyclerview"
