--- a/app/src/main/res/layout/fragment_second_onboarding.xml
+++ b/app/src/main/res/layout/fragment_second_onboarding.xml
@@ -60,9 +60,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:fontFamily="@font/roboto"
             android:paddingVertical="@dimen/size9"
             android:text="@string/_continue"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             android:textSize="@dimen/font_size_16"
             android:textStyle="bold" />
 
@@ -92,12 +93,10 @@
     <View
         android:id="@+id/view"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/size20"
         android:background="@drawable/blur"
         app:layout_constraintBottom_toTopOf="@+id/continueButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
